sort of fixed google maps onSuccessWatch() called when #map_page & #viewer pages clicked.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -49,6 +49,15 @@
 <a href="#settings" data-role="button" data-icon="gear" data-theme="e" data-inline="true" data-iconpos="notext" style="vertical-align: middle;">Settings</a>
 </TD></TR></TABLE>
 
+<div data-role="navbar" class="ui-body-a">
+    <ul>
+        <li><a href="#profile">Your Profile</a></li>
+        <li><a href="#map_page" ID="link_map">Map</a></li>
+        <LI><A HREF="#broadcaster" class="ui-btn-active">Broadcast</A></LI>
+        <LI><A HREF="#viewer" ID="link_viewer">Request</A></LI>
+    </ul>
+</div><!-- /navbar --> 
+
 </DIV> <!-- /header -->
 
 <div data-role="content" data-theme="a">
@@ -113,26 +122,11 @@ Attach photo:<BR />
 
 <button type="submit" data-theme="b" name="submit1" class="submitRequest" data-inline="true" value="submit-value" ID="acceptRequest1">accept &amp; go live</button>
 
-
-
 </DIV> <!-- /request -->
 
 <DIV ID="requestsDiv"></DIV>
 
 </DIV> <!-- /content -->
-
-<DIV data-role="footer" data-theme="a" data-position="fixed">
-
-<div data-role="navbar" class="ui-body-a">
-    <ul>
-        <li><a href="#profile">Your Profile</a></li>
-        <li><a href="#map_page" ID="link_map">Map</a></li>
-        <LI><A HREF="#broadcaster" class="ui-btn-active">Broadcast</A></LI>
-        <LI><A HREF="#viewer" ID="link_viewer">Request</A></LI>
-    </ul>
-</div><!-- /navbar --> 
-
-</DIV> <!-- /footer -->
 
 </div> <!-- /page -->
 
@@ -151,6 +145,15 @@ Attach photo:<BR />
 <a href="#settings" data-role="button" data-icon="gear" data-theme="e" data-inline="true" data-iconpos="notext" style="vertical-align: middle;">Settings</a>
 </TD></TR></TABLE>
 
+<div data-role="navbar" class="ui-body-a">
+    <ul>
+        <li><a href="#profile">Your Profile</a></li>
+        <li><a href="#map_page" ID="link_map" class="ui-btn-active">Map</a></li>
+        <LI><A HREF="#broadcaster">Broadcast</A></LI>
+        <LI><A HREF="#viewer" ID="link_viewer">Request</A></LI>
+    </ul>
+</div><!-- /navbar --> 
+
 </DIV> <!-- /header -->
 
 <div data-role="content">
@@ -160,19 +163,6 @@ Attach photo:<BR />
 <div id="map_canvas2" style="width:100%; height:400px"></div>
 
 </DIV> <!-- end content-page -->
-
-<DIV data-role="footer" data-theme="a" data-position="fixed">
-
-<div data-role="navbar" class="ui-body-a">
-    <ul>
-        <li><a href="#profile">Your Profile</a></li>
-        <li><a href="#map_page" class="ui-btn-active">Map</a></li>
-        <LI><A HREF="#broadcaster">Broadcast</A></LI>
-        <LI><A HREF="#viewer">Request</A></LI>
-    </ul>
-</div><!-- /navbar --> 
-
-</DIV> <!-- /footer -->
 
 </div> <!-- /page -->
 
@@ -190,6 +180,15 @@ Attach photo:<BR />
 <a href="#search" data-role="button" data-icon="search" data-theme="e" data-inline="true" data-iconpos="notext" style="vertical-align: middle;">Search</a>
 <a href="#settings" data-role="button" data-icon="gear" data-theme="e" data-inline="true" data-iconpos="notext" style="vertical-align: middle;">Settings</a>
 </TD></TR></TABLE>
+
+<div data-role="navbar" class="ui-body-a">
+    <ul>
+        <li><a href="#profile">Your Profile</a></li>
+        <li><a href="#map_page" ID="link_map">Map</a></li>
+        <LI><A HREF="#broadcaster">Broadcast</A></LI>
+        <LI><A HREF="#viewer" ID="link_viewer" class="ui-btn-active">Request</A></LI>
+    </ul>
+</div><!-- /navbar --> 
 
 </DIV> <!-- /header -->
 
@@ -240,19 +239,6 @@ What multimedia do you want broadcasted?
 
 </DIV> <!-- end content-page -->
 
-<DIV data-role="footer" data-theme="a" data-position="fixed">
-
-<div data-role="navbar" class="ui-body-a">
-    <ul>
-        <li><a href="#profile">Your Profile</a></li>
-        <li><a href="#map_page">Map</a></li>
-        <LI><A HREF="#broadcaster">Broadcast</A></LI>
-        <LI><A HREF="#viewer" class="ui-btn-active">Request</A></LI>
-    </ul>
-</div><!-- /navbar --> 
-
-</DIV> <!-- /footer -->
-
 </div> <!-- /page -->
 
 
@@ -270,6 +256,15 @@ What multimedia do you want broadcasted?
 <a href="#settings" data-role="button" data-icon="gear" data-theme="e" data-inline="true" data-iconpos="notext" style="vertical-align: middle;">Settings</a>
 </TD></TR></TABLE>
 
+<div data-role="navbar" class="ui-body-a">
+    <ul>
+        <li><a href="#profile" class="ui-btn-active">Your Profile</a></li>
+        <li><a href="#map_page" ID="link_map">Map</a></li>
+        <LI><A HREF="#broadcaster">Broadcast</A></LI>
+        <LI><A HREF="#viewer" ID="link_viewer">Request</A></LI>
+    </ul>
+</div><!-- /navbar --> 
+
 </DIV> <!-- /header -->
 
 <div data-role="content">
@@ -296,19 +291,6 @@ What multimedia do you want broadcasted?
 <CENTER><a href="buttons-types.html" data-role="button" data-transition="fade" CLASS="updateButton" data-inline="true" data-theme="b">update settings</a></CENTER>
 
 </DIV> <!-- end content-page -->
-
-<DIV data-role="footer" data-theme="a" data-position="fixed">
-
-<div data-role="navbar" class="ui-body-a">
-    <ul>
-        <li><a href="#profile" class="ui-btn-active">Your Profile</a></li>
-        <li><a href="#map_page">Map</a></li>
-        <LI><A HREF="#broadcaster">Broadcast</A></LI>
-        <LI><A HREF="#viewer">Request</A></LI>
-    </ul>
-</div><!-- /navbar --> 
-
-</DIV> <!-- /footer -->
 
 </div> <!-- /page -->
 
@@ -326,6 +308,16 @@ What multimedia do you want broadcasted?
 <a href="#settings" data-role="button" data-icon="gear" data-theme="e" data-inline="true" data-iconpos="notext" style="vertical-align: middle;">Settings</a>
 </TD></TR></TABLE>
 
+
+<div data-role="navbar" class="ui-body-a">
+    <ul>
+        <li><a href="#profile">Your Profile</a></li>
+        <li><a href="#map_page" ID="link_map">Map</a></li>
+        <LI><A HREF="#broadcaster">Broadcast</A></LI>
+        <LI><A HREF="#viewer" ID="link_viewer">Request</A></LI>
+    </ul>
+</div><!-- /navbar --> 
+
 </DIV> <!-- /header -->
 
 <div data-role="content">
@@ -353,19 +345,6 @@ What multimedia do you want broadcasted?
 
 </DIV> <!-- end content-page -->
 
-<DIV data-role="footer" data-theme="a" data-position="fixed">
-
-<div data-role="navbar" class="ui-body-a">
-    <ul>
-        <li><a href="#profile" class="ui-btn-active">Your Profile</a></li>
-        <li><a href="#map_page">Map</a></li>
-        <LI><A HREF="#broadcaster">Broadcast</A></LI>
-        <LI><A HREF="#viewer">Request</A></LI>
-    </ul>
-</div><!-- /navbar --> 
-
-</DIV> <!-- /footer -->
-
 </div> <!-- /page -->
 
 
@@ -381,6 +360,15 @@ What multimedia do you want broadcasted?
 <a href="#search" data-role="button" data-icon="search" data-theme="e" data-inline="true" data-iconpos="notext" style="vertical-align: middle;">Search</a>
 <a href="#settings" data-role="button" data-icon="gear" data-theme="e" data-inline="true" data-iconpos="notext" style="vertical-align: middle;">Settings</a>
 </TD></TR></TABLE>
+
+<div data-role="navbar" class="ui-body-a">
+    <ul>
+        <li><a href="#profile">Your Profile</a></li>
+        <li><a href="#map_page" ID="link_map">Map</a></li>
+        <LI><A HREF="#broadcaster">Broadcast</A></LI>
+        <LI><A HREF="#viewer" ID="link_viewer">Request</A></LI>
+    </ul>
+</div><!-- /navbar --> 
 
 </DIV> <!-- /header -->
 
@@ -414,19 +402,6 @@ navigator.contacts.find(fields, onSuccess, onError, options);
 
 </DIV> <!-- end content-page -->
 
-<DIV data-role="footer" data-theme="a" data-position="fixed">
-
-<div data-role="navbar" class="ui-body-a">
-    <ul>
-        <li><a href="#profile">Your Profile</a></li>
-        <li><a href="#map_page">Map</a></li>
-        <LI><A HREF="#broadcaster">Broadcast</A></LI>
-        <LI><A HREF="#viewer">Request</A></LI>
-    </ul>
-</div><!-- /navbar --> 
-
-</DIV> <!-- /footer -->
-
 </div> <!-- /page -->
 
 
@@ -434,15 +409,8 @@ navigator.contacts.find(fields, onSuccess, onError, options);
 
 $(function() {
 	init();
-	google.maps.event.trigger(map_canvas, 'resize');
-	google.maps.event.trigger(map_canvas2, 'resize');
-	$('#link_map_page').live('click', function() {
-		google.maps.event.trigger(map_canvas, 'resize');
-		google.maps.event.trigger(map_canvas2, 'resize');
-	});
-	$('#link_viewer').live('click', function() {
-		google.maps.event.trigger(map_canvas, 'resize');
-		google.maps.event.trigger(map_canvas2, 'resize');
+	$("#link_map, #link_viewer").click(function(){
+		navigator.geolocation.getCurrentPosition(onSuccessWatch, onError, {timeout:10000});
 	});
 });
 
